# Reliability_realisation

./: CMakeLists.txt  README.md  main.cpp  test.py
distributions/beta/: beta_dist.cpp  beta_dist.h  beta_dist.py  beta_dist_test.cpp
homework/01/: motor.py
homework/02/: 300hours.py
homework/04/: reliability4.ipynb
other_doc_flles/: documenttion.md  reliability.mcdx  task5.docx  task5.xlsx
reliability_venv/: pyvenv.cfg
